Adicionamos mas uma parte de texto

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Minha Primeir Aula</h1>
+        <h1>Minha Primeir Aula Com Mais um comit</h1>
     </header>
 </body>
 </html>
